need to fix content_wrap in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ footer { clear: both; padding-left: 1em; position: absolute; bottom: 0.8em; colo
 	
 	html {height: 100%; width: 100%; }
 	body { height: 100%; min-height: 100%; }
-	#content_wrap { width: 100%; padding: 0; position: absolute; top: 0; bottom: 0; right: 0; left: 0; height: 100%; }
+	#content_wrap { width: 100%; padding: 0; position: relative; height: 100%; }
 	section { margin-bottom: 1em; }
 	.input-group, tr, td, #audioPlayer_wrap { width: 100%; }
 	#audioPlayer { margin-top: 0; width: 100%; border: none; border-top: 5px solid #616161; } { width: 100%; }
